// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopLanguagesHistorical when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
    <a
      aria-label="language.csv"
      href="http://www.example.com/data//language.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    >
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            English
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            91.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 91%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Spanish
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            5.3%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 5%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Chinese
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.9%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 1%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            French
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.5%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Japanese
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Portuguese
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.3%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            German
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.3%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Italian
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Korean
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Russian
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
    <a
      aria-label="language.csv"
      href="http://www.example.com/data//language.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopLanguagesHistorical when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_language"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Languages
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the language of a user's browser or device.
        </span>
      </span>
    </a>
    <a
      aria-label="language.csv"
      href="http://www.example.com/data//language.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-languages"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;
